--- a/index_final.html
+++ b/index_final.html
@@ -18,7 +18,7 @@
                 <h2>Generate Password</h2>
             </div>
             <div class="card-body">
-                <textarea id="password" placeholder="Generate a random password"
+                <textarea id="password"
                     aria-label="Generated Password"></textarea>
             </div>
 
